-
Type:
Bug
-
Resolution: Fixed
-
Priority:
P4
-
Affects Version/s: 11, 14, 15
-
Component/s: hotspot
-
b12
-
x86
-
windows
| Issue | Fix Version | Assignee | Priority | Status | Resolution | Resolved In Build |
|---|---|---|---|---|---|---|
| JDK-8240805 | 14.0.2 | Lutz Schmidt | P4 | Resolved | Fixed | b01 |
| JDK-8246567 | 13.0.4 | Lutz Schmidt | P4 | Resolved | Fixed | b04 |
| JDK-8240593 | 11.0.8-oracle | Lutz Schmidt | P4 | Resolved | Fixed | b01 |
| JDK-8240718 | 11.0.8 | Lutz Schmidt | P4 | Resolved | Fixed | b01 |
When running a {slow | fast}dbg vm with -XX:+DebugVtables, we may crash in VtableStubs::create_vtable_stub() due to a too small size estimate for the generated VM call.
Solution: adjust size estimates for both x86_64 and x86_32 generators.
Solution: adjust size estimates for both x86_64 and x86_32 generators.
- backported by
-
JDK-8240593 [win][x86] vtable stub generation: assert failure (code size estimate)
-
- Resolved
-
-
JDK-8240718 [win][x86] vtable stub generation: assert failure (code size estimate)
-
- Resolved
-
-
JDK-8240805 [win][x86] vtable stub generation: assert failure (code size estimate)
-
- Resolved
-
-
JDK-8246567 [win][x86] vtable stub generation: assert failure (code size estimate)
-
- Resolved
-
- relates to
-
JDK-8239931 [win][x86] vtable stub generation: assert failure (code size estimate) follow-up
-
- Resolved
-