8239456: vtable stub generation: assert failure (code size estimate)

Reviewed-by: thartmann